feat: add create-brand-address endpoint
