# openapi.json
@@ -54,7 +54,7 @@
         },
         "summary": "Sign in with email",
         "tags": [
-          "Accounts"
+          "Accounts / SignIn"
         ]
       }
     },
@@ -153,7 +153,7 @@
         },
         "summary": "Sign in with Google",
         "tags": [
-          "Accounts"
+          "Accounts / SignIn"
         ]
       }
     },
@@ -181,7 +181,7 @@
         },
         "summary": "Sign out",
         "tags": [
-          "Accounts"
+          "Accounts / SignIn"
         ]
       }
     },
@@ -257,7 +257,7 @@
         },
         "summary": "Create account with email",
         "tags": [
-          "Accounts"
+          "Accounts / SignUp"
         ]
       }
     },
@@ -338,7 +338,7 @@
         },
         "summary": "Create account with Google",
         "tags": [
-          "Accounts"
+          "Accounts / SignUp"
         ]
       }
     },
@@ -414,7 +414,7 @@
         },
         "summary": "Validate email verification code",
         "tags": [
-          "Accounts"
+          "Accounts / SignUp"
         ]
       }
     },
@@ -471,7 +471,7 @@
         },
         "summary": "Complete onboarding",
         "tags": [
-          "Accounts"
+          "Accounts / SignUp"
         ]
       }
     },
@@ -639,11 +639,11 @@
           }
         },
         "tags": [
-          "Brands"
+          "Workspace / Brands"
         ]
       },
       "post": {
-        "operationId": "upload",
+        "operationId": "createBrand",
         "parameters": [],
         "requestBody": {
           "required": true,
@@ -661,7 +661,61 @@
           }
         },
         "tags": [
-          "Brands"
+          "Workspace / Brands"
+        ]
+      }
+    },
+    "/api/v1/workspace/brands/{brandId}/address": {
+      "post": {
+        "description": "Add a new addresss to a brand.",
+        "operationId": "createBrandAddress",
+        "parameters": [
+          {
+            "name": "brandId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateBrandAddressDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Address created successfully.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CreateBrandAddressResponseDto"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Brand not found.",
+            "content": {
+              "application/json": {
+                "example": {
+                  "message": "Brand not found.",
+                  "error": "BRAND_NOT_FOUND",
+                  "statusCode": 404
+                }
+              }
+            }
+          }
+        },
+        "summary": "Create address",
+        "tags": [
+          "Workspace / Brands"
         ]
       }
     },
@@ -1517,6 +1571,65 @@
       "CreateBrandDto": {
         "type": "object",
         "properties": {}
+      },
+      "CreateBrandAddressDto": {
+        "type": "object",
+        "properties": {}
+      },
+      "CreateBrandAddressResponseDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "state": {
+            "type": "object"
+          },
+          "city": {
+            "type": "string",
+            "nullable": true
+          },
+          "neighborhood": {
+            "type": "string",
+            "nullable": true
+          },
+          "street": {
+            "type": "string",
+            "nullable": true
+          },
+          "number": {
+            "type": "string",
+            "nullable": true
+          },
+          "complement": {
+            "type": "string",
+            "nullable": true
+          },
+          "brandId": {
+            "type": "string"
+          },
+          "brand": {
+            "type": "object"
+          },
+          "responsibles": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/BrandResponsibleEntityDto"
+            }
+          }
+        },
+        "required": [
+          "id",
+          "state",
+          "city",
+          "neighborhood",
+          "street",
+          "number",
+          "complement",
+          "brandId",
+          "brand",
+          "responsibles"
+        ]
       },
       "DeleteSpotsDto": {
         "type": "object",
